--- a/frontend/src/pages/fundings/Fundings.module.css
+++ b/frontend/src/pages/fundings/Fundings.module.css
@@ -9,7 +9,10 @@
 
 @media (max-width: 1100px) {
   .grid {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
   }
 }
 
